--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -11,6 +11,7 @@ http://www.color-hex.com/color-palette/5479
 
 * {
   font-family: arial;
+  margin: 0; /* Allows items like the header's background color to cover the entire respective portion of the website. */
 }
 
 body {
@@ -54,6 +55,7 @@ header section.name {
   width: 49%;
   display: inline-block;
   text-align: center;
+  color: #f5f9e9;
 }
 
 header section.icons {
@@ -80,17 +82,17 @@ nav a:hover {
   color: #5b8c5a;
 }
 
-/* = = = Body Formatting = = = */
+/* = = = Column Formatting = = = */
 
 section.leftside {
-  height: 25em;
+  height: 32em; /* If issue below requiring `position: absolute;` can be resolved so that it can be discarded, change to `height:auto;` */
   width: 50%;
   margin: auto;
   display: inline-block;
 }
 
 section.rightside {
-  height: 25em;
+  height: 32em; /* If issue below requiring `position: absolute;` can be resolved so that it can be discarded, change to `height:auto;` */
   width: 50%;
   margin: auto;
   display: inline-block;
@@ -100,11 +102,12 @@ section.rightside {
 section.leftside h4, section.rightside h4 {
   text-align: center;
   color: #575a4b;
+  padding-top: 1em;
 }
 
 section.leftside img, section.rightside img {
-  max-width: 350px;
-  max-height: 350px;
+  max-width: 250px;
+  max-height: 250px;
 }
 
 section.leftside ol, section.rightside ol {
@@ -113,6 +116,8 @@ section.leftside ol, section.rightside ol {
   color: #575a4b;
   font-size: 1em;
 }
+
+/* = = = List Formatting = = = */
 
 section ol li a {
   text-decoration: none;
@@ -127,6 +132,35 @@ section.blog li {
   padding-right: 3em;
 }
 
+/* = = = Section Div Formatting = = = */
+
+section div {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+section div.projectOn {
+  margin-right: -20%;
+}
+
+section div.projectOff {
+  margin-left: -20%;
+}
+
+section div a {
+  text-decoration: none;
+  color: #575a4b;
+  text-align: center;
+  font-size: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+/* = = = Footer Formatting = = = */
+
 footer {
   text-align: center;
+  color: #f5f9e9;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
